# clay

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
clay/: __init__.py  __main__.py  cli.py  config.py  conversation.py  session_manager.py  trace.py
clay/agents/: __init__.py  base.py  coding_agent.py  fast_coding_agent.py  llm_agent.py  orchestrator.py  research_agent.py  smart_agent.py  streaming_agent.py
clay/llm/: __init__.py  anthropic_provider.py  base.py  cloudrift_provider.py  factory.py  model_router.py  openai_provider.py
clay/orchestrator/: __init__.py  context_engine.py  fsm.py  model_adapter.py  orchestrator.py  patch_engine.py  plan.py  policy_engine.py  sandbox_mock.py  test_runner.py
clay/runtime/: __init__.py  executor.py  plan.py
clay/tools/: __init__.py  base.py  bash_tool.py  console_tools.py  file_tools.py  message_tool.py  search_tools.py  user_tools.py  web_tools.py
tests/: README.md  __init__.py  conftest.py  test_agents.py  test_conversation.py  test_tools.py  test_trace.py
tests/integration/: __init__.py  helpers.py  test_coding_tasks.py  test_complex_projects.py  test_complex_queries.py  test_error_handling.py  test_helpers.py  test_incremental_queries.py  test_simple_queries.py  test_task_routing.py
tests/orchestrator/: __init__.py  test_interactive.py  test_plan.py
tests/tools/: __init__.py  test_bash_tool.py  test_console_tools.py  test_file_tools.py  test_message_tool.py  test_tool.py  test_user_tools.py
