[project]
name = "clay"
version = "0.1.0"
description = "An agentic coding system inspired by Claude Code"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "tiktoken>=0.5",
    "openai>=1.0",
    "anthropic>=0.25",
    "gitpython>=3.1",
    "watchdog>=4.0",
    "PyYAML>=6.0",
    "jinja2>=3.0",
    "pygments>=2.0",
]

[project.scripts]
clay = "clay.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["scratchpad*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I", "N", "UP", "C90"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true